# openenv-RL-

./: .gitignore  Dockerfile  README.md  client.py  inference.py  models.py  move.py  openenv.yaml  scenario_config.json
.app_sandbox/: package-lock.json
.app_sandbox/routes/: users.js
.tmp/: grader.sh
devops_sandbox/: __init__.py  client.py  inference.py  pyproject.toml
devops_sandbox/.app_sandbox/: config.json  server.js
devops_sandbox/.app_sandbox/routes/: data.js
devops_sandbox/server/: Dockerfile  devops_sandbox_environment.py
devops_sandbox/simulated_app/routes/: data.js
server/: # Self-Healing DevOps Sandbox - a Huggin.txt  __init__.py  app.py  devops_sandbox_environment.py
simulated_app/: .env  Dockerfile  config.json  package.json  server.js
simulated_app/middleware/: logger.js  rateLimit.js
simulated_app/routes/: data.js  status.js  users.js
